# solaredge-api

./: README.md  consumption.py  exercise.ipynb  influxconnection.py  pyproject.toml  telemetry.py  test.py  ui.py  utilities.py
solaredge/: __init__.py  api.py  apiconstruct.py  const.py  errors.py
